version: "0.8.5"
opam-version: "2.0"
homepage:     "https://github.com/mirage/mirage-crypto"
dev-repo:     "git+https://github.com/mirage/mirage-crypto.git"
bug-reports:  "https://github.com/mirage/mirage-crypto/issues"
doc:          "https://mirage.github.io/mirage-crypto/doc"
authors:      ["David Kaloper <dk505@cam.ac.uk>" "Hannes Mehnert <hannes@mehnert.org>" ]
maintainer:   "Hannes Mehnert <hannes@mehnert.org>"
license:      "ISC"
synopsis:     "Simple public-key cryptography for the modern age"

build: [ ["dune" "subst"] {pinned}
         ["dune" "-x" "riscv" "build" "-p" "mirage-crypto-pk" "-j" jobs ]
         ["dune" "runtest" "-p" name "-j" jobs] {with-test} ]

depends: [
  "conf-gmp-powm-sec" {build}
  "ocaml-riscv" {>= "4.08.0"}
  "dune" {>= "1.7"}
  "ounit" {with-test}
  "randomconv-riscv" {with-test & >= "0.1.3"}
  "cstruct-riscv" {>="3.2.0"}
  "mirage-crypto-riscv" {=version}
  "mirage-crypto-rng-riscv" {=version}
  "sexplib-riscv"
  "ppx_sexp_conv"
  "zarith-riscv" {>= "1.4"}
  "eqaf-riscv" {>= "0.7"}
  "rresult-riscv" {>= "0.6.0"}
  "zarith-freestanding-riscv"
]
description: """
Mirage-crypto-pk provides public-key cryptography (RSA, DSA, DH).
"""