version: "0.8.5"
opam-version: "2.0"
homepage:     "https://github.com/mirage/mirage-crypto"
dev-repo:     "git+https://github.com/mirage/mirage-crypto.git"
bug-reports:  "https://github.com/mirage/mirage-crypto/issues"
doc:          "https://mirage.github.io/mirage-crypto/doc"
authors:      ["David Kaloper <dk505@cam.ac.uk>" "Hannes Mehnert <hannes@mehnert.org>" ]
maintainer:   "Sai Venkata Krishnan <saiganesha5.svkv@gmail.com>"
license:      "ISC"
synopsis:     "Simple symmetric cryptography for the modern age"

build: [ ["dune" "subst"] {pinned}
         ["dune" "build" "-x" "riscv" "-p" "mirage-crypto" "-j" jobs ]
         ["dune" "runtest" "-p" name "-j" jobs] {with-test} ]

depends: [
  "conf-pkg-config" {build}
  "ocaml-riscv" {>= "4.08.0"}
  "dune" {>= "1.7"}
  "dune-configurator" {>= "2.0.0"}
  "ounit-riscv" {with-test}
  "cstruct-riscv" {>="3.2.0"}
  "eqaf-riscv" {>= "0.7"}
]
depopts: [
  "mirage-riscv-riscv"
  "ocaml-freestanding-riscv"
]
conflicts: [
  "ocaml-freestanding-riscv" {< "0.4.1"}
]
description: """
Mirage-crypto provides symmetric ciphers (DES, AES, RC4, ChaCha20/Poly1305), and
hashes (MD5, SHA-1, SHA-2).
"""