version: "0.8.10"
opam-version: "2.0"
homepage:     "https://github.com/mirage/mirage-crypto"
dev-repo:     "git+https://github.com/mirage/mirage-crypto.git"
bug-reports:  "https://github.com/mirage/mirage-crypto/issues"
doc:          "https://mirage.github.io/mirage-crypto/doc"
authors:      ["David Kaloper <dk505@cam.ac.uk>" "Hannes Mehnert <hannes@mehnert.org>" ]
maintainer:   "Sai Venkata Krishnan <saiganesha5.svkv@gmail.com>"
license:      "ISC"
synopsis:     "Entropy collection for a cryptographically secure PRNG"

build: [ ["dune" "subst"] {pinned}
         ["dune" "build" "-x" "riscv" "-p" "mirage-crypto-rng-mirage" "-j" jobs ]
         ["dune" "runtest" "-p" name "-j" jobs] {with-test} ]

depends: [
  "ocaml-riscv" {>= "4.08.0"}
  "dune" {>= "2.6"}
  "mirage-crypto-rng-riscv" {=version}
  "duration-riscv"
  "cstruct-riscv" {>= "4.0.0"}
  "logs-riscv"
  "lwt-riscv" {>= "4.0.0"}
  "mirage-runtime-riscv" {>= "3.8.0"}
  "mirage-time-riscv" {>= "2.0.0"}
  "mirage-clock-riscv" {>= "3.0.0"}
  "mirage-unix" {with-test & >= "3.0.0"}
  "mirage-time-unix" {with-test & >= "2.0.0"}
  "mirage-clock-unix" {with-test & >= "3.0.0"}
]
description: """
Mirage-crypto-rng-mirage provides entropy collection code for the RNG.
"""