version: "0.8.10"
opam-version: "2.0"
homepage:     "https://github.com/mirage/mirage-crypto"
dev-repo:     "git+https://github.com/mirage/mirage-crypto.git"
bug-reports:  "https://github.com/mirage/mirage-crypto/issues"
doc:          "https://mirage.github.io/mirage-crypto/doc"
authors:      ["David Kaloper <dk505@cam.ac.uk>" "Hannes Mehnert <hannes@mehnert.org>" ]
maintainer:   "Sai Venkata Krishnan V <saiganesha5.svkv@gmail.com>"
license:      "ISC"
synopsis:     "A cryptographically secure PRNG"

build: [ ["dune" "subst"] {pinned}
         ["dune" "build" "-x" "riscv" "-p" "mirage-crypto-rng" "-j" jobs ]
         ["dune" "runtest" "-p" name "-j" jobs] {with-test} ]

depends: [
  "ocaml-riscv" {>= "4.08.0"}
  "dune" {>= "2.6"}
  "dune-configurator" {>= "2.0.0"}
  "duration-riscv"
  "cstruct-riscv" {>= "4.0.0"}
  "logs-riscv"
  "mirage-crypto-riscv" {=version}
  "ounit" {with-test}
  "randomconv" {with-test & >= "0.1.3"}
# lwt sublibrary
  "mtime-riscv"
  "lwt-riscv" {>= "4.0.0"}
]
conflicts: [ "mirage-runtime-riscv" {< "3.8.0"} ]
description: """
Mirage-crypto-rng provides a random number generator interface, and
implementations: Fortuna, HMAC-DRBG, getrandom/getentropy based (in the unix
sublibrary)
"""