(library
 (name mirage_crypto_pk)
 (public_name mirage-crypto-pk)
 (libraries cstruct zarith mirage-crypto mirage-crypto-rng sexplib
   eqaf.cstruct rresult)
 (ocamlopt_flags (-default-compartment-id 255 -function-sections))
 (preprocess
  (pps ppx_sexp_conv))
 (private_modules common dh dsa rsa z_extra))
